Aligned navbar correctly using flexbox. Still doing some tweaking.

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,41 +1,193 @@
 @import "bootstrap";
-@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap");
 
 * {
   box-sizing: border-box;
-  margin: 0;
   padding: 0;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
+  margin: 0;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: sans-serif;
 }
 
 nav {
-  font-family: "Roboto", Roboto, sans-serif;
-  background-color: #222;
-  height: 55px;
+  background: #222;
+  height: 73px;
 }
 
 ul {
-  display: inline-block;
-  float: right;
-  margin-top: 8px;
+  list-style-type: none;
 }
 
-ul li {
-  display: inline-block;
-  padding-top: 20px;
-}
-
-.navbar li a:hover {
+a {
+  color: white;
   text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.menu li {
+  font-size: 16px;
+  padding: 15px 5px;
+}
+
+.menu li a {
+  display: block;
+}
+
+.logo a {
+  font-size: 20px;
+}
+
+.button.secondary {
+  border-bottom: 1px #444 solid;
+}
+
+/* Mobile Menu */
+
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.toggle {
+  order: 1;
+}
+
+.item.button {
+  order: 2;
+}
+
+.item {
+  width: 100%;
+  text-align: center;
+  order: 3;
+  display: none;
+}
+
+.item.active {
+  display: block;
+}
+
+.toggle {
+  cursor: pointer;
+}
+
+.bars {
+  background: #999;
+  display: inline-block;
+  height: 2px;
+  width: 18px;
+  position: relative;
+}
+
+.bars::before,
+.bars::after {
+  background: #999;
+  content: "";
+  display: inline-block;
+  height: 2px;
+  width: 18px;
+  position: absolute;
+}
+
+.bars::before {
+  top: 5px;
+}
+
+.bars::after {
+  top: -5px;
+}
+
+/* Tablet Menu */
+
+@media all and (min-width: 468px) {
+  .menu {
+    justify-content: center;
+  }
+
+  .logo {
+    flex: 1;
+  }
+
+  .item.button {
+    width: auto;
+    order: 1;
+    display: block;
+  }
+
+  .toggle {
+    order: 2;
+  }
+
+  .button.secondary {
+    border: 0;
+  }
+
+  .button a {
+    text-decoration: none;
+    padding: 7px 15px;
+    background: #f7773b;
+    border: 1px solid #fa6925;
+    border-radius: 50em;
+  }
+
+  .button.secondary a {
+    background: transparent;
+  }
+
+  .button a:hover {
+    transition: all 0.25s;
+  }
+
+  .button:not(.secondary) a:hover {
+    background: #f7773b;
+    border-color: #fa6925;
+  }
+
+  .button.secondary a:hover {
+    color: #ddd;
+  }
+}
+
+@media all and (min-width: 768px) {
+  .item {
+    display: block;
+    width: auto;
+  }
+
+  .toggle {
+    display: none;
+  }
+
+  .logo {
+    order: 0;
+  }
+
+  .item {
+    order: 1;
+  }
+
+  .button {
+    order: 2;
+  }
+
+  .menu li {
+    padding: 15px 10px;
+  }
+
+  .menu li.button {
+    padding-right: 0;
+  }
+
+  .signIn {
+    order: 1;
+  }
 }
 
 section {
@@ -55,19 +207,18 @@ section {
   color: white;
 }
 
-.button {
-  background-color: #008cba;
-  border: none;
-  color: white;
-  padding: 7px 16px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-}
+// .button {
+//   border: none;
+//   color: white;
+//   padding: 7px 16px;
+//   text-align: center;
+//   text-decoration: none;
+//   display: inline-block;
+//   font-size: 16px;
+//   margin: 4px 2px;
+//   cursor: pointer;
+//   transition: all 0.3s ease 0s;
+// }
 
 .button:hover {
   background-color: rgba(0, 136, 169, 0.8);
